# coinscope-ai

./: .env.example  .gitignore  Business_Plan_v1.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONFIG_AUDIT_2026-05-03.md  CONTEXT_PRIMER.md  CONTRIBUTING.md  Cloud_Deployment_Guide.md  CoinScopeAI_Project_History.md  Counsel_Brief_v2.md  DEVELOPMENT_WORKFLOW.md  LICENSE  MANUS_OPERATING_SOP.md  Makefile  OPS_Linear_Tickets_v1.md  Production_Candidate_Criteria_v2.md  README.md  SECURITY.md  Vendor_Failure_Mode_Mapping_v1.md  Week1_Integration_Report.md  billing_server.py  coinscope.env.example  design-system.md  diagnose_signals.py  docker-compose.yml  generate_norm_params.py  mvp-readiness-checklist.md  package-lock.json  prometheus-alert-rules.yml  prometheus.yml  pyproject.toml  regime-topology-philosophy.md  regime-topology.html  requirements.txt  state-field-philosophy.md  stripe_test_price_ids.json  validation_analysis.py
.claude/: launch.json
.claude/commands/: coinscope-daily-review.md  coinscope-debug-signal.md  coinscope-gate-explanation.md  coinscope-risk-audit.md  coinscope-signal-design.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  strategy_change.md
.github/workflows/: cd.yml  ci.yml
_decisions/: decision-log.md
apps/dashboard/: README.md  index.html  package.json
architecture/: architecture.md  design-system-manifest.md  enhancement-audit-2026-05-02.md  session-2026-05-02-summary.md
archive/: README.md
archive/cleanup-2026-04-20/: README.md  billing_subscriptions.db-journal
archive/code-reviews/: CODE_REVIEW_2026-04-19.md  CODE_REVIEW_2026-04-21.md  CODE_REVIEW_2026-04-22.md  CODE_REVIEW_2026-04-23.md  CODE_REVIEW_2026-04-26.md  CODE_REVIEW_2026-04-30.md  CODE_REVIEW_2026-05-02.md
archive/doc_update_reports/: DOC_UPDATE_REPORT_2026-04-10.md  DOC_UPDATE_REPORT_2026-04-11.md  DOC_UPDATE_REPORT_2026-04-14.md  DOC_UPDATE_REPORT_2026-04-15.md  DOC_UPDATE_REPORT_2026-04-18.md  DOC_UPDATE_REPORT_2026-04-19.md  (+2 more)
billing/: README.md  __init__.py  config.py  customer_portal.py  entitlements.py  models.py  notifications.py  pg_subscription_store.py  stripe_checkout.py  subscription_store.py  webhook_handler.py
bot/: telegram_alerts.py
business-plan/: 00-framework.md  01-executive-summary.md  02-market-thesis.md  03-icp-segmentation.md  04-problem-value-prop.md  05-product-strategy.md  06-pricing-monetization.md  07-gtm-strategy.md  08-sales-partnerships.md  09-brand-messaging.md  10-operations-support.md  11-financial-model.md  12-risk-compliance-trust.md  13-kpi-okr.md  14-launch-roadmap.md  15-investor-narrative.md  16-scenario-planning.md
coinscope-engine-plugin/: .mcp.json  README.md
coinscope-mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
coinscope_trading_engine/: .env.example  .gitignore  Dockerfile  README.md  api.py  benchmark.py  binance_rest_testnet_client.py  binance_websocket_client.py  celery_app.py  config.py  main.py  master_orchestrator.py  notion_sync_config.py  pair_monitor.py  pytest.ini  requirements.txt  run_tests.py  scoring_fixed.py  setup_stripe_products.py  tasks.py  testnet_check.py  trade_journal (2).py  trade_journal.py  trade_logger.py
coinscopeai-dashboard/: ideas.md  package.json  pnpm-lock.yaml
coinscopeai-skills/: ai-security-risk.skill  binance-api-specialist.skill  technical-indicator-expert.skill
crypto_futures_dev/: SKILL.md
dashboard/: billing_success.html  pnl_widget.html  pricing.html
docs/: CODEBASE.md  CoinScopeAI_Cross_Platform_Audit_Report.md  CoinScopeAI_FORMAT_ROUTING_CARD.docx  CoinScopeAI_SKILL_ROUTING.docx  CoinScopeAI_Strategic_Plan.md  Free_Data_Streams_README.md  OpenClaw_Integration_Recommendation.md  PROJECT_BOARD_SETUP.md  Phase1_Multi_Exchange_Streams_README.md  Phase2_Alpha_Regime_Enrichment_README.md  README.md  RESTRUCTURE_SUMMARY.md  api_exploration.md  defect-map.md  design_system.md  diagnosis_findings.md  feature_roadmap.md  project-history.md  project_overview.md  project_structure.md  refactor-plan.md  repo-audit.md  repository-map.md  risk_management_framework.md  system_architecture.md  v3_upgrade_report.md
engine/: api.py  run_tests.py
incidents/: 2026-04-18_EXECUTION_duplicate_orders_retry.md  2026-04-18_dashboard_redis_drift.md  2026-05-06_GIT_stale-lockfiles.md  digest-2026-05-03.md  digest-2026-05-04.md  digest-2026-05-10.md  drift-log.md
legal/: COI-60-starter-pack.md  tos-and-disclosures-DRAFT.md
manus_upload/: MASTER_INSTRUCTIONS.md  Performance_Analyzer_SKILL.md  Regime_Detector_SKILL.md
market_scanner_skill/: SKILL.md  market_scanner.py
memory/: README.md  __init__.py  __main__.py  api.py  base_store.py  cli.py  config.py  manager.py  scoopy_api.py  scoopy_cli.py  scoopy_mempalace_sop.md  test_integration.py  test_production.py
ml/: regime_classifier_v3.py  regime_label_dataset_v1.py
research/: .~lock.regime_features_matrix.xlsx#  funding-data-vendor-comparison.md  massive-vs-ccxt-pro.md  okx_vs_bybit_oi.md
risk_management/: hmm_regime_detector.py  kelly_position_sizer.py  regime_features.py  regime_predictor.py  risk_gate.py
scripts/: backfill_ohlcv_1h.py  daily_status.sh  daily_status_check.py  drift_detector.py  evidence_gate.py  health_check_paper_trading.py  invariant_matrix_check.py  mirror-v1-deltas-to-v2.sh  reconcile_binance_vs_journal.py  risk_threshold_guardrail.py  run_daily_status.sh  run_validation.py  setup_github_labels.py  setup_stripe_test_products.py  sync_verify.py  test_testnet_connectivity.py  train_hmm_regime.py  watchdog_journal_duplicates.py
skills/: market_scanner.skill  position_sizer.skill  risk_gate.skill
strategy/: strategic-memo-2026-04-29.md
testnet_trader/: .env.example  client.py  config.py  run_trade.py  trade_executor.py
tests/: test_billing_portal.py  test_billing_schema.py  test_billing_webhook.py  test_ci_smoke.py  test_coinscopeai.py  test_directory_boundaries.py  test_invariants.py  test_slo_save.py
utils/: io.py
validation/: __init__.py  _common.py  cpcv_validation.py  walk_forward_validation.py
(+465 files in other folders)
