[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coinscopeai"
version = "0.1.0"
description = "Regime-aware, risk-first trading intelligence for USDT-perpetual crypto futures"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

# ── Ruff — linter ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
    "docs",
    "coinscope_trading_engine/logs",
    "coinscope_trading_engine/data",
    "frontend",
    "coinscopeai-dashboard",
    "engine",
    "bot",
    "apps",
    "backend",
    "services",
    "strategies",
    "risk_management",
    "generate_norm_params.py",
    "diagnose_signals.py",
    "data",
    "deploy",
    "infra",
    "notebooks",
    "ml_models",
    "memory",
    "market_scanner_skill",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # line too long (black handles this)
    "B008",   # do not perform function calls in default arguments (FastAPI deps)
    "B904",   # raise without from inside except (too strict for this codebase)
    "SIM108", # ternary operator (readability preference)
    "UP",     # pyupgrade — deferred to dedicated cleanup pass
    "F841",   # local variable assigned but never used — deferred
]

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "data",
    "scanner",
    "scanners",
    "signals",
    "risk",
    "alerts",
    "models",
    "monitoring",
    "utils",
    "billing",
    "execution",
    "intelligence",
    "storage",
    "validation",
]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "B", "F401"]  # allow assert + broad imports in tests
"scripts/**/*.py" = ["T201", "I001", "F401", "E702", "F541"]             # allow print() in operator scripts
"**/conftest.py" = ["F401"]
"diagnose_signals.py" = ["E402", "I001", "F401"]
"bot/*.py" = ["I001", "W293"]
"engine/**/*.py" = ["E402", "I001", "F401", "W293", "UP006", "UP035", "F541", "UP007", "B"]
"engine/*.py" = ["E402", "I001", "F401", "W293", "UP006", "UP035", "F541", "UP007", "B"]

# ── Black — formatter ─────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | \.git
  | dist
  | build
  | frontend
  | coinscopeai-dashboard
  | coinscope_trading_engine/logs
  | coinscope_trading_engine/data
)/
'''

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "coinscope_trading_engine/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring live services (Redis, Binance testnet)",
    "smoke: CI smoke tests — fast, no external deps",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = [
    "coinscope_trading_engine",
    "engine",
    "risk_management",
    "scripts",
]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
    "*/logs/*",
    "*/data/*",
    "*/migrations/*",
    "setup_stripe_products.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_covered = false
